[project]
name = "nxrunner"
description = ""
version = "1.0.0"

[project.urls]
Repository = "https://github.com/nxware/nxrunner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
include = [ "nxrunner/*.py" ]

[project.entry-points.nweb_runner]
mongo = "nxrunner:MongoDB"
audio_convert = "nxrunner.audio:Convert"