[project]
name = "nxrunner"
description = ""
version = "1.0.1"
dependencies = ["nwebclient"]

[project.optional-dependencies]
full = ["pymongo", "buenavista", "pihole6api", "pydub"]
mongo = ["pymongo"]

[project.urls]
Repository = "https://github.com/nxware/nxrunner"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.hatch.build]
include = [ "nxrunner/**/*.py" ]

[project.entry-points.nweb_runner]
mongo = "nxrunner.db.mongo:MongoDB"
pihole_api = "nxrunner.apis:PiHoleApi"
audio_convert = "nxrunner.audio:Convert"

[nx]
pydeps="-xx nxrunner"

